added: file endpoint, better error messages
